name:                yang
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Tools for working with YANG data models
description:	     This library provides a parser for YANG modules and tools
                     for working with YANG data models and instances.
homepage:            https://gitlab.labs.nic.cz/labs/yang-tools
bug-reports:	     https://gitlab.labs.nic.cz/labs/yang-tools/issues
license:             GPL-3
license-file:        LICENSE
author:              Ladislav Lhotka
maintainer:          lhotka@nic.cz
stability:	     experimental
copyright:           © 2015 CZ.NIC, z. s. p. o.
category:            Data
build-type:          Simple
tested-with:	     GHC == 7.10

extra-source-files:
  examples/*.hs

cabal-version:       >=1.10


library
  exposed-modules:     Data.Yang.Module
  other-modules:       Data.Yang.Module.Parser.Internal
                       Data.Yang.Module.Parser
                       Data.Yang.Module.Types
  other-extensions:    CPP, OverloadedStrings
  build-depends:       base >=4.8, bytestring, attoparsec, text
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable parsemod
  build-depends:       yang, attoparsec, bytestring, base >= 4.8
  main-is:             ParseModule.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010
